--- a/.github/workflows/syn_to_huggingface.yml
+++ b/.github/workflows/syn_to_huggingface.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://gauravgarwal:$HF_TOKEN@huggingface.co/spaces/gauravgarwal/News_summarization_app_and_TTS main
+        run: git push --force https://gauravgarwal:$HF_TOKEN@huggingface.co/spaces/gauravgarwal/News_summarization_app_and_TTS main
